* iseq.c (iseq_data_to_ary): check line info table boundary.  line   number 0 means no line number info is needed.  [ruby-dev:45130]   [Bug #5894]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@34303 b2dd03c8-39d4-4d8f-98ff-823fe69b080e